fix: fix horizontal scroll

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,8 +14,8 @@
 
 .info-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, max-content);
-  grid-template-rows: repeat(auto-fit, max-content);
+  //grid-template-columns: repeat(auto-fit, max-content);
+  //grid-template-rows: repeat(auto-fit, max-content);
   column-gap: 1vw;
 }
 
