--- a/scss/mediaqueries.scss
+++ b/scss/mediaqueries.scss
@@ -109,10 +109,12 @@
     height: 197px;
     width: 290px;
     margin: 9px 0 0 16px;
+    padding: 157px 0 0 258px;
   }
 
   #play-ico {
-    padding: 55% 89%;
+    padding: 0;
+    margin: 0;
   }
 
   #paragraph-under-header {
@@ -177,6 +179,10 @@
 
   .headline-container {
     padding: 36px 0 27px 0;
+  }
+
+  .collage-container {
+    overflow: scroll;
   }
 
   .text-and-collage {
@@ -350,6 +356,10 @@
 
   .list-with-ellipse-and-text {
     display: none;
+  }
+
+  .block-with-numbers-in-ellipse-list-container {
+    padding: 0;
   }
 
   .slider-container {
